--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -2,7 +2,7 @@
   <div class="title_wrapper">
     <h1>Campusmack Sign up</h1>
   </div>
-  <div class="column_wrapper clearfix">
+  <div class="column_wrapper clearfix sign_in-bg">
     <div class="left_column">
       <div class="title_box">
         <h2>SIGN UP WITH CAMPUSMACK</h2>
