--- a/app/views/conferences/status.html.erb
+++ b/app/views/conferences/status.html.erb
@@ -1,7 +1,14 @@
-<div class="standard clearfix">
-  <div class="title_wrapper"><h1>Statistics of <%= @conference.name %></h1></div>
+<% content_for :head do %>
+  <%= stylesheet_link_tag 'statistics' %>
+<% end %>
+
+<div class="content standard clearfix">
+  <div class="content_title"><h1>Statistics</h1></div>
   <div class="content_container fullstats clearfix">
-    <div class="new_line"></div>
-    <%= render :partial => 'stats', :locals => {:conference => @conference, :limit => nil} %>
+    <% Conference.all.each do |conference| %>
+      <ul class="statistics">
+        <%= render :partial => 'statistics', :locals => { :conference => conference, :limit => nil } %>
+      </ul>
+    <% end %>
   </div>
 </div>
