--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="title_wrapper clearfix">
     <div class="cont_title"><h1>Edit <%= resource_name.to_s.humanize %></h1></div>
   </div>
-  <div class="column_wrapper clearfix">
+  <div class="column_wrapper clearfix sign_in-bg">
     <div class="left_column edit_profile_left_column">
       <div class="title_box">
         <h2>EDIT USER INFO</h2>
