--- a/app/views/welcome/_sotw.html.erb
+++ b/app/views/welcome/_sotw.html.erb
@@ -1,6 +1,6 @@
-<div class="standard clearfix">
-  <div class="title_wrapper"><h1>Smacks of the week</h1></div>
-  <div class="column_wrapper clearfix">
+<div class="content standard clearfix">
+  <div class="content_title"><h1>Smacks of the week</h1></div>
+  <div class="content_subtitle">
     <%= render :partial => 'shared/search' %>
   </div>
 
