--- a/public/stylesheets/utility_components.css
+++ b/public/stylesheets/utility_components.css
@@ -3,15 +3,15 @@
    and rest of utility components of app.
 */
 
-.back_button{
+.back_button {
     width: 85px;
-    height:25px;
+    height: 25px;
     background: url('/images/back_button.png') repeat-x;
 }
 
-.blue_button{
-    display:block;
-    height:28px;
+.blue_button {
+    display: block;
+    height: 28px;
     background: url('/images/bg_blue_button.png') repeat-x;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -20,17 +20,17 @@
     text-align: center;
 }
 
-.blue_button a{
-    display:block;
+.blue_button a {
+    display: block;
     padding-top: 4px;
     color: #fff;
     font-family: Conv_MyriadPro-BoldCond;
     font-size: 20px;
 }
 
-.sign_up_now_button{
-    display:block;
-    height:28px;
+.sign_up_now_button {
+    display: block;
+    height: 28px;
     background: url('/images/sign_up_now_button.png') repeat-x;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -39,17 +39,17 @@
     text-align: center;
 }
 
-.sign_up_now_button a{
-    display:block;
+.sign_up_now_button a {
+    display: block;
     padding-top: 4px;
     color: #fff;
     font-family: Conv_MyriadPro-BoldCond;
     font-size: 20px;
 }
 
-.dark_button{
-    display:block;
-    height:28px;
+.dark_button {
+    display: block;
+    height: 28px;
     background: url('/images/dark_button_bg.png') repeat-x;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -58,30 +58,30 @@
     text-align: center;
 }
 
-.dark_button a{
-    display:block;
+.dark_button a {
+    display: block;
     padding: 4px 9px 0;
     color: #fff;
     font-family: Conv_MyriadPro-BoldCond;
     font-size: 20px;
 }
 
-.white_button{
-    display:block;
-    height:28px;
+.white_button {
+    display: block;
+    height: 28px;
     background: url('/images/white_button_bg.png') repeat-x;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
     -khtml-border-radius: 5px;
     border-radius: 5px;
     text-align: center;
-    border-color:#bebebe;
+    border-color: #bebebe;
     border-width: 0 1px 1px 0;
     border-style: solid;
 }
 
-.white_button a{
-    display:block;
+.white_button a {
+    display: block;
     padding: 4px 10px 0;
     color: #4190c9;
     font-family: Conv_MyriadPro-BoldCond;
@@ -89,32 +89,82 @@
 }
 
 .table_button {
-  font-style: Conv_MyriadPro-BoldCond;
-  background: #fff url(/images/utility_button-bg.png) repeat-x top;
-  display: block;
-  border-style: solid;
-  border-width: 0 1px 1px 0;
-  border-color: #c2c2c2;
-  text-transform: uppercase;
-  font-size: 10px;
-  padding: 0 10px;
-  line-height: 18px;
-  color: #484848;
-  height: 17px;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  border-radius: 2px;
+    font-style: Conv_MyriadPro-BoldCond;
+    background: #fff url(/images/utility_button-bg.png) repeat-x top;
+    display: block;
+    border-style: solid;
+    border-width: 0 1px 1px 0;
+    border-color: #c2c2c2;
+    text-transform: uppercase;
+    font-size: 10px;
+    padding: 0 10px;
+    line-height: 18px;
+    color: #484848 !important;
+    height: 17px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
 }
 
 .table_button:hover {
-  background-position: bottom;
-  color: #fff;
+    background-position: bottom;
+    color: #fff !important;
 }
 
-  .table_button.black {
-    color: #494949;
-    font-size: 10px;
+.table_button.black {
+    color: #333;
+    font-size: 8px;
     background-image: url(/images/table_button-black-bg.png);
     height: 14px;
     line-height: 15px;
-  }
+    padding: 0 2px;
+}
+
+.table_button.black:hover {
+    color: #fff;
+}
+
+/* Used will_paginate template styling */
+.pagination {
+    background: url(/images/view_more_bg.png);
+    font-size: 11px;
+    overflow: hidden;
+    margin-top: 3px;
+    line-height: 18px;
+    text-align: center;
+}
+
+.pagination a, .pagination em, .pagination span {
+    padding: 0 6px 0 3px;
+    border-right: 1px solid #B6B6B6;
+}
+
+.pagination a:last-child, .pagination span:last-child {
+    border-right: none;
+}
+
+.pagination em {
+    font-style: normal;
+    font-weight: bold;
+}
+
+.pagination span {
+    color: #B6B6B6;
+}
+
+.items_per_page {
+    float: right;
+    padding-left: 5px;
+    border-left: 1px solid #CFCFCF;
+    font-size: 11px;
+    margin-bottom: 3px;
+}
+
+.items_per_page a, .items_per_page em {
+    padding-left: 2px;
+}
+
+.items_per_page em {
+    font-style: normal;
+    font-weight: bold;
+}
