added 'loading' text in 'import contacts'

--- a/app/views/contacts/_import_form.html.erb
+++ b/app/views/contacts/_import_form.html.erb
@@ -1,11 +1,13 @@
 <script type="text/javascript" src="http://www.plaxo.com/css/m/js/util.js"></script>
 <script type="text/javascript" src="http://www.plaxo.com/css/m/js/basic.js"></script>
 <script type="text/javascript" src="http://www.plaxo.com/css/m/js/abc_launcher.js"></script>
+
 <script type="text/javascript">
+  
   function onABCommComplete() {
     // OPTIONAL: do something here after the new data has been populated in your text area
-    //alert($("#contact").val());
-    //var js_var =$("#message_to").val();
+    
+    
     $.ajax({
       type: "POST",
       url: "<%= import_contacts_path() -%>",
@@ -14,7 +16,18 @@
 
   }
 </script>
-
+<div id ="loading_div">
+  <p style="color: white"> loading.... </p>
+</div>
 <%= text_area_tag("contact", nil, {:rows => 1, :cols => 5, :style => "height:28px;width:380px;padding:10px;display:none "}) %>
-<a href="#" onclick="showPlaxoABChooser('contact', '<%=  plaxo_import_user_path(current_user) %>'); return false">IMPORT CONTACTS</a>
+<a href="#" onclick="showPlaxoABChooser('contact', '<%=  plaxo_import_user_path(current_user) %>'); return false"><p>IMPORT CONTACTS</p></a>
 
+<script type="text/javascript">
+  $('#loading_div').hide().ajaxStart(function() {
+        $(this).show();
+    })
+    .ajaxStop(function() {
+        $(this).hide();
+    })
+;
+</script>
