--- a/app/views/contacts/_grouped_contacts_select.html.erb
+++ b/app/views/contacts/_grouped_contacts_select.html.erb
@@ -12,25 +12,34 @@
   <% end %>
 
   <%  @email_group_check_box = "" %>
-  <% @contacts.in_groups_of(3, false) do |row| %>
+
+  <% @contacts.in_groups_of(2, false) do |row| %>
 
     <div style="display: table-row">
-      <% row.each() do |contact| %>
-        <%
-        pattern = /<(.*)>/
-        match = pattern.match(contact.name)
-        name = nil
-        name = (match != nil ? match[1] : contact.name)
-      %>
-        <span class="group_cb" style="padding:5px;" >
+      <ul class="contact-groups">
+
+        <% row.each() do |contact| %>
+
+          <%
+          pattern = /<(.*)>/
+          match = pattern.match(contact.name)
+          name = nil
+          name = (match != nil ? match[1] : contact.name)
+        %>
+
           <% input_id = "#{groupid}-#{contact.id}" %>
-          <input class="chk_box_email" type="checkbox" checked="checked" name="cb_email[]"
-                 value="<%= contact.email -%>" id="<%= input_id -%>"/>
-          <!--span title="<%= name -%>"><%= truncate(name, :length => 18) -%></span-->
-          <%= label_tag(input_id, truncate(name, :length => 18), :title => name) -%>
-        </span>
-      <% end %>
+          <li style="width: 200px; float: left">
+
+            <input class="chk_box_email" type="checkbox" checked="checked" name="cb_email[]"
+                   value="<%= contact.email -%>" id="<%= input_id -%>"/>
+            <!--span title="<%= name -%>"><%= truncate(name, :length => 18) -%></span-->
+            <%= label_tag(input_id, truncate(name, :length => 18), :title => name) -%>
+
+          </li>
+        <% end %>
+      </ul>
     </div>
 
   <% end %>
+
 <% end %>
