--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1568,3 +1568,7 @@ form.semantic .actions .alt:hover {
 .news .summary {
     height: auto;
 }
+
+ul.contact-groups{
+    list-style-type: none;
+}
